testsuite/tests/parser/should_fail/NoNumericUnderscores1.stderr

NoNumericUnderscores1.hs:11:3: error:
    Illegal underscores in floating literals
    Suggested fix: Perhaps you intended to use NumericUnderscores
